update recipe node